第4回課題修正：①FVの画像を横幅いっぱいに表示②ロゴのalt属性を変更③「MENU」上の余白調整④「イベント」の<table>タグを囲う<div>の縦幅調整⑤「TOPへ戻る」ボタンの位置調整⑥（FBなかったですが気になったので）「アバウト」「メニュー」の<p>タグの右端が揃えるようにtext-align:jutify;を追加指定

--- a/kadai_ideta_0328/index.html
+++ b/kadai_ideta_0328/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="header_wrap">
             <h1>
-                <img src="./images/design_cafe_logo_header@2x.png" alt="DEZIGN">
+                <img src="./images/design_cafe_logo_header@2x.png" alt="DESIGN CAFE">
             </h1>
             <nav class="pc_nav">
                 <ul>
@@ -136,7 +136,7 @@
     <footer>
         <div class="section_inner">
             <div>
-                <img src="./images/design_cafe_logo_footer@2x.png" alt="ロゴ">
+                <img src="./images/design_cafe_logo_footer@2x.png" alt="DESIGN CAFE">
             </div>
             <div class="footer_info">
                 <p>OPEN 18:00 / CLOSE 24:00
