第4回課題修正２：TOPに戻ることができるようリンク追加、ページ内リンクの動きを滑らかにする

--- a/kadai_ideta_0328/index.html
+++ b/kadai_ideta_0328/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="header_slider">
             <img src="./images/pc_first-100.jpg" alt="店内の様子">
         </div>
@@ -149,7 +149,9 @@
         <p class="footer_copy"><small>&copy;2021 DESIGN CAFE</small></p>
     </footer>
     <div class="return">
-        <img src="./images/to_top@2x.png" alt="ここをクリックするとTOPへ戻る画像">
+        <a href="#header">
+            <img src="./images/to_top@2x.png" alt="ここをクリックするとTOPへ戻る画像">
+        </a>
     </div>
 </body>
 
