--- a/kadai_ideta_0328/index.html
+++ b/kadai_ideta_0328/index.html
@@ -47,7 +47,9 @@
             <p>ハッピーに溢れる1日を
                 <br>1杯のコーヒーから。
             </p>
-            <p>毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを入れ足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。</p>
+            <p class="pc_header_txt">毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを入れ足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。</p>
+            <p class="sp_header_txt">毎日を丁寧に大切に過ごしたい。<br>だからこそ一杯一杯丁寧にコーヒーを入れ<br>足を運んでくれるお客さんには落ち着く空間と<br>こだわりのコーヒーを提供したい。
+            </p>
         </div>
     </header>
     <main>
@@ -75,33 +77,41 @@
             </h2>
             <div class="menu_items">
                 <div class="menu_item">
-                    <div class="pc_menu_img">
-                        <img src="./images/pc_menu_drink-100.jpg" alt="コーヒーの画像">
+                    <div>
+                        <div class="pc_menu_img">
+                            <img src="./images/pc_menu_drink-100.jpg" alt="コーヒーの画像">
+                        </div>
+                        <div class="sp_menu_img">
+                            <img src="./images/drink_sp@2x-100.jpg" alt="コーヒーの画像">
+                        </div>
+                        <h3>Drink</h3>
                     </div>
-                    <div class="sp_menu_img">
-                        <img src="./images/drink_sp@2x-100.jpg" alt="コーヒーの画像">
-                    </div>
-                    <h3>Drink</h3>
                     <p>ドリンクメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。</p>
                 </div>
                 <div class="menu_item">
-                    <div class="pc_menu_img">
-                        <img src="./images/pc_menu_food-100.jpg" alt="パスタの画像">
+                    <div>
+                        <div class="pc_menu_img">
+                            <img src="./images/pc_menu_food-100.jpg" alt="パスタの画像">
+                        </div>
+                        <div class="sp_menu_img">
+                            <img src="./images/food_sp@2x-100.jpg" alt="パスタの画像">
+                        </div>
+                        <h3>Food</h3>
                     </div>
-                    <div class="sp_menu_img">
-                        <img src="./images/food_sp@2x-100.jpg" alt="パスタの画像">
+                    <div class="menu_txt">
+                        <p>フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。</p>
                     </div>
-                    <h3>Food</h3>
-                    <p>フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。</p>
                 </div>
                 <div class="menu_item">
-                    <div class="pc_menu_img">
-                        <img src="./images/pc_menu_sweets-100.jpg" alt="ケーキの画像">
+                    <div>
+                        <div class="pc_menu_img">
+                            <img src="./images/pc_menu_sweets-100.jpg" alt="ケーキの画像">
+                        </div>
+                        <div class="sp_menu_img">
+                            <img src="./images/cake_sp@2x-100.jpg" alt="ケーキの画像">
+                        </div>
+                        <h3>Sweets</h3>
                     </div>
-                    <div class="sp_menu_img">
-                        <img src="./images/cake_sp@2x-100.jpg" alt="ケーキの画像">
-                    </div>
-                    <h3>Sweets</h3>
                     <p>スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。</p>
                 </div>
             </div>
