--- a/kadai_ideta_0328/index.html
+++ b/kadai_ideta_0328/index.html
@@ -5,18 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>第4回講義</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.css"
+        integrity="sha512-Woz+DqWYJ51bpVk5Fv0yES/edIMXjj3Ynda+KWTIkGoynAMHrqTcDUQltbipuiaD5ymEo9520lyoVOo9jCQOCA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
+        integrity="sha512-Ixzuzfxv1EqafeQlTCufWfaC6ful6WFqIz4G+dWvK0beHw0NVJwvCKSgafpy5gwNqKmgUfIBraVwkKI+Cz0SEQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 
 <body>
     <header id="header">
         <div class="header_slider">
-            <picture>
-                <source srcset="./images/sp_main_vs@2x-100.jpg" media="(max-width:767px)">
-                <img src="./images/pc_first-100.jpg" alt="店内の様子">
-            </picture>
+            <div>
+                <picture>
+                    <source srcset="./images/sp_main_vs@2x-100.jpg" media="(max-width:767px)">
+                    <img src="./images/pc_first-100.jpg" alt="店内の様子">
+                </picture>
+            </div>
+            <div>
+                <picture>
+                    <source srcset="./images/sp_main_vs_2@2x-100.jpg" media="(max-width:767px)">
+                    <img src="./images/slider_2.jpg" alt="店内の様子">
+                </picture>
+            </div>
         </div>
         <div class="header_wrap">
             <h1>
@@ -120,7 +139,33 @@
             <h2>
                 <img src="./images/gallery@2x.png" alt="GALLERY">
             </h2>
-            <div class="pc_gallery_items">
+            <div class="pc_gallery_items gallery_slider">
+                <a href="./images/pc_gallary_05-100.jpg" data-lightbox="image-1" data-title="店内を利用するお客さんの様子"><img
+                        src="./images/pc_gallary_05-100.jpg" alt="店内を利用するお客さんの様子"></a>
+                <a href="./images/pc_gallary_04-100.jpg" data-lightbox="image-1" data-title="コーヒー豆の画像"><img
+                        src="./images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像"></a>
+                <a href="./images/pc_gallary_03-100.jpg" data-lightbox="image-1" data-title="店内の様子"><img
+                        src="./images/pc_gallary_03-100.jpg" alt="店内の様子"></a>
+                <a href="./images/pc_gallary_02-100.jpg" data-lightbox="image-1" data-title="店内のインテリア画像"><img
+                        src="./images/pc_gallary_02-100.jpg" alt="店内のインテリア画像"></a>
+                <a href="./images/pc_gallary_01-100.jpg" data-lightbox="image-1" data-title="コーヒを淹れている画像"><img
+                        src="./images/pc_gallary_01-100.jpg" alt="コーヒを淹れている画像"></a>
+                <a href="./images/pc_gallary_05-100.jpg" data-lightbox="image-1" data-title="店内を利用するお客さんの様子"><img
+                        src="./images/pc_gallary_05-100.jpg" alt="店内を利用するお客さんの様子"></a>
+                <a href="./images/pc_gallary_04-100.jpg" data-lightbox="image-1" data-title="コーヒー豆の画像"><img
+                        src="./images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像"></a>
+                <a href="./images/pc_gallary_03-100.jpg" data-lightbox="image-1" data-title="店内の様子"><img
+                        src="./images/pc_gallary_03-100.jpg" alt="店内の様子"></a>
+                <a href="./images/pc_gallary_02-100.jpg" data-lightbox="image-1" data-title="店内のインテリア画像"><img
+                        src="./images/pc_gallary_02-100.jpg" alt="店内のインテリア画像"></a>
+                <a href="./images/pc_gallary_01-100.jpg" data-lightbox="image-1" data-title="コーヒを淹れている画像"><img
+                        src="./images/pc_gallary_01-100.jpg" alt="コーヒを淹れている画像"></a>
+            </div>
+            <!-- そのままだとレスポンシブ対応されない
+            そもそもブレイクポイント以下では１枚だけしか画像を入れてなかったから
+            同じ枚数分画像を入れると全部の画像が表示されるがスライダーにはなっていない
+            追加で同じスライダーのクラス名をつける -->
+            <div class="sp_gallery_items gallery_slider">
                 <div>
                     <img src="./images/pc_gallary_05-100.jpg" alt="店内を利用するお客さんの様子">
                 </div>
@@ -136,9 +181,21 @@
                 <div>
                     <img src="./images/pc_gallary_01-100.jpg" alt="コーヒを淹れている画像">
                 </div>
-            </div>
-            <div class="sp_gallery_items">
-                <img src="./images/mobile_gallery-100.jpg" alt="">
+                <div>
+                    <img src="./images/pc_gallary_05-100.jpg" alt="店内を利用するお客さんの様子">
+                </div>
+                <div>
+                    <img src="./images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像">
+                </div>
+                <div>
+                    <img src="./images/pc_gallary_03-100.jpg" alt="店内の様子">
+                </div>
+                <div>
+                    <img src="./images/pc_gallary_02-100.jpg" alt="店内のインテリア画像">
+                </div>
+                <div>
+                    <img src="./images/pc_gallary_01-100.jpg" alt="コーヒを淹れている画像">
+                </div>
             </div>
         </section>
         <section id="event" class="section_inner">
@@ -212,8 +269,32 @@
                 $('.sp_nav').fadeToggle();
                 $('.sp_btn').toggleClass('open');
             })
+            $('.header_slider').slick({
+                autoplay: true,
+                autoplaySpeed: 2000,
+                dots: true,
+                arrows: false,
+            });
+            $('.gallery_slider').slick({
+                autoplay: true,
+                autoplaySpeed: 2000,
+                dots: false,
+                slidesToShow: 5,
+                slidesToScroll: 1,
+                responsive: [
+                    {
+                        breakpoint: 767,
+                        settings: {
+                            slidesToShow: 1,
+                        }
+                    }
+                ]
+            });
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/js/modaal.min.js"></script>
+
+
 </body>
 
 </html>
