6/2_ポートフォリオ

--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -10,7 +10,7 @@
     <script>
         (function (d) {
             var config = {
-                kitId: 'pqp3bwa',
+                kitId: 'ayw6ybt',
                 scriptTimeout: 3000,
                 async: true
             },
@@ -44,7 +44,7 @@
         </div> -->
 
         <h1>あなたの想いを、開花させる。</h1>
-        <p class="en">WEB DESIGN</p>
+        <p>WEB DESIGN</p>
         <img src="./images/FV_img.png" alt="花の画像">
     </header>
     <main>
@@ -52,7 +52,7 @@
             <div class="about">
                 <div class="ttl">
                     <h2>わたしのこと</h2>
-                    <p class="en">About<br>me</p>
+                    <p class="cursive">About<br>me</p>
                     <div class="erase"></div>
                     <div class="about_line"></div>
                 </div>
@@ -77,17 +77,20 @@
             </div>
             <!-- <img src="./images/flower00.png" alt=""> -->
         </section>
-        <section>
-            <div class="ttl wrapper">
-                <h2>つくったもの</h2>
-                <p class="en">Works</p>
-                <div class="erase"></div>
-                <div class="works_line"></div>
+        <section class="works">
+            <div class="wrapper">
+                <div class="ttl">
+                    <h2>つくったもの</h2>
+                    <p class="cursive">Works</p>
+                    <div class="erase"></div>
+                    <div class="works_line"></div>
+                </div>
             </div>
+
 
             <div class="wrapper">
                 <div class="hp_square">
-                    <h3 class="en">WEB SITE</h3>
+                    <h3>WEB SITE</h3>
                     <div class="hp_img">
                         <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
                     </div>
@@ -105,7 +108,7 @@
 
             <div class="wrapper">
                 <div class="lp_square">
-                    <h3 class="en">LANDING PAGE</h3>
+                    <h3>LANDING PAGE</h3>
                     <div class="lp_img">
                         <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
                     </div>
@@ -125,7 +128,7 @@
 
             <div class="wrapper">
                 <div class="bn_square">
-                    <h3 class="en">BANNER</h3>
+                    <h3>BANNER</h3>
                     <div class="bn_img">
                         <img src="./images/bn_supaisukennkyuujyo_1.jpg" alt="BANNERのFV画像">
                     </div>
@@ -146,7 +149,7 @@
         <section>
             <div class="ttl wrapper">
                 <h2>おはなしする</h2>
-                <p class="en">Contact</p>
+                <p class="cursive">Contact</p>
                 <div class="erase"></div>
                 <div class="contact_line"></div>
             </div>
