--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -10,6 +10,7 @@
     " rel="stylesheet">
 
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/style.css">
     <script>
         (function (d) {
@@ -24,44 +25,44 @@
 </head>
 
 <body>
-    <!-- <div>
-        <div>
-            <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
-        </div>
-        <div>
-            <nav>
-                <li>
-                    <ul class="en"><a href="">TOP</a></ul>
-                    <ul class="en"><a href="">ABOUT ME</a></ul>
-                    <ul class="en"><a href="">CONTACT</a></ul>
-                </li>
+    <header>
+        <nav>
+            <li>
+                <ul class="en"><a href="">TOP</a></ul>
+                <ul class="en"><a href="">ABOUT ME</a></ul>
+                <ul class="en"><a href="">CONTACT</a></ul>
+            </li>
 
-                <li>
-                    <ul class="en"><a href="">HP</a></ul>
-                    <ul class="en"><a href="">LP</a></ul>
-                    <ul class="en"><a href="">BANNER</a></ul>
-                    <ul class="en"><a href="">WORKS</a></ul>
-                </li>
-            </nav>
-        </div>
-    </div> -->
+            <li>
+                <ul class="en"><a href="">HP</a></ul>
+                <ul class="en"><a href="">LP</a></ul>
+                <ul class="en"><a href="">BANNER</a></ul>
+                <ul class="en"><a href="">WORKS</a></ul>
+            </li>
+        </nav>
+    </header>
+    <div class="portfolioname">
+        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+    </div>
     <main data-scroll-container>
-        <section data-scroll-section class="header wrapper scroll_section">
-
-
-            <h1>あなたの想いを、開花させる。</h1>
-            <p>WEB DESIGN</p>
-            <img src="./images/FV_img.png" alt="花の画像">
+        <section data-scroll-section class="scroll_section">
+            <div class="fv">
+                <div class="wrapper">
+                    <h1>あなたの想いを、開花させる。</h1>
+                    <p>WEB DESIGN</p>
+                    <!-- <img src="./images/FV_img.png"> -->
+                </div>
+            </div>
         </section>
-        <section data-scroll-section class="wrapper scroll_section">
+        <section data-scroll-section class="scroll_section">
             <div class="about">
-                <div class="ttl">
+                <div class="ttl wrapper">
                     <h2>わたしのこと</h2>
                     <p class="cursive">About<br>me</p>
                     <div class="erase"></div>
-                    <div class="about_line"></div>
+                    <div class="ttl_line"></div>
                 </div>
-                <div class="about_content">
+                <div class="about_content wrapper">
                     <div>
                         <img src="./images/profile-80.jpg" alt="プロフィール写真">
                     </div>
@@ -80,112 +81,113 @@
                     </div>
                 </div>
             </div>
-            <!-- <img src="./images/flower001.png" alt=""> -->
+            <!-- <img src="./images/flower001.png"> -->
         </section>
         <section data-scroll-section class="works scroll_section">
-            <div class="wrapper">
-                <div class="ttl">
-                    <h2>つくったもの</h2>
-                    <p class="cursive">Works</p>
-                    <div class="erase"></div>
-                    <div class="works_line"></div>
-                </div>
-            </div>
-
-
-            <div class="wrapper">
-                <div class="hp_square">
-                    <h3>WEB SITE</h3>
-                    <div class="hp_img">
-                        <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
+            <div class="works_wrapper">
+                <div class=" wrapper">
+                    <div class="ttl">
+                        <h2>つくったもの</h2>
+                        <p class="cursive">Works</p>
+                        <div class="erase"></div>
+                        <div class="works_line"></div>
                     </div>
-                    <a class="hp_link" href="">
-                        <div class="btn">
-                            <p>もっと<br>知りたい</p>
-                            <div class="arrow_right"></div>
-                            <div class="arrow_bottom"></div>
-                            <p class="en">MORE</p>
-                        </div>
-                    </a>
                 </div>
-            </div>
-            <!-- <img src="./images/flower002.png" alt="一輪の花の画像"> -->
 
-            <div class="wrapper">
-                <div class="lp_square">
-                    <h3>LANDING PAGE</h3>
-                    <div class="lp_img">
-                        <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
+
+                <div class="hp wrapper">
+                    <div class="hp_square">
+                        <h3>WEB SITE</h3>
+                        <div class="hp_img">
+                            <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
+                        </div>
+                        <a class="hp_link" href="">
+                            <div class="btn">
+                                <p>もっと<br>知りたい</p>
+                                <div class="arrow_right"></div>
+                                <div class="arrow_bottom"></div>
+                                <p class="en">MORE</p>
+                            </div>
+                        </a>
                     </div>
-                    <a href="">
-                        <div class="btn">
-                            <p>もっと<br>知りたい</p>
-                            <div class="arrow_right"></div>
-                            <div class="arrow_bottom"></div>
-                            <p class="en">MORE</p>
-                        </div>
-                    </a>
                 </div>
+                <!-- <img src="./images/flower002.png"> -->
 
-
-            </div>
-            <!-- <img src="./images/flower003.png" alt="二輪の花の画像"> -->
-
-            <div class="wrapper">
-                <div class="bn_square">
-                    <h3>BANNER</h3>
-                    <div class="bn_img">
-                        <img src="./images/bn_supaisukennkyuujyo_1.jpg" alt="BANNERのFV画像">
+                <div class="wrapper">
+                    <div class="lp_square">
+                        <h3>LANDING PAGE</h3>
+                        <div class="lp_img">
+                            <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
+                        </div>
+                        <a href="">
+                            <div class="btn">
+                                <p>もっと<br>知りたい</p>
+                                <div class="arrow_right"></div>
+                                <div class="arrow_bottom"></div>
+                                <p class="en">MORE</p>
+                            </div>
+                        </a>
                     </div>
-                    <a href="">
-                        <div class="btn">
-                            <p>もっと<br>知りたい</p>
-                            <div class="arrow_right"></div>
-                            <div class="arrow_bottom"></div>
-                            <p class="en">MORE</p>
-                        </div>
-                    </a>
+
+
                 </div>
+                <!-- <img src="./images/flower003.png"> -->
+
+                <div class="wrapper">
+                    <div class="bn_square">
+                        <h3>BANNER</h3>
+                        <div class="bn_img">
+                            <img src="./images/bn_supaisukennkyuujyo_1.jpg" alt="BANNERのFV画像">
+                        </div>
+                        <a href="">
+                            <div class="btn">
+                                <p>もっと<br>知りたい</p>
+                                <div class="arrow_right"></div>
+                                <div class="arrow_bottom"></div>
+                                <p class="en">MORE</p>
+                            </div>
+                        </a>
+                    </div>
 
 
+                </div>
             </div>
-            <!-- <img src="./images/flower004.png" alt="三輪の花の画像"> -->
+            <!-- <img src="./images/flower004.png"> -->
         </section>
         <section data-scroll-section class="scroll_section">
-            <div class="ttl wrapper">
-                <h2>おはなしする</h2>
-                <p class="cursive">Contact</p>
-                <div class="erase"></div>
-                <div class="contact_line"></div>
+            <div class="contact">
+                <div class="ttl wrapper">
+                    <h2>おはなしする</h2>
+                    <p class="cursive">Contact</p>
+                    <div class="erase"></div>
+                    <div class="contact_line"></div>
+                </div>
+
+                <form action="confirm.php" method="post" class="wrapper">
+                    <table class="contact-table">
+                        <tr>
+                            <th>お名前</th>
+                            <td>
+                                <input type="text" name="名前" placeholder="山田　花子">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>メールアドレス</th>
+                            <td>
+                                <input type="email" name="メール" placeholder="@">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>お問い合わせ内容</th>
+                            <td>
+                                <textarea name="問い合わせ" id=""></textarea>
+                            </td>
+                        </tr>
+                    </table>
+                    <input class="submit" type="submit" value="送信する">
+
+                </form>
             </div>
-
-
-
-            <form action="confirm.php" method="post" class="wrapper">
-                <table class="contact-table">
-                    <tr>
-                        <th>お名前</th>
-                        <td>
-                            <input type="text" name="名前" placeholder="山田　花子">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>メールアドレス</th>
-                        <td>
-                            <input type="email" name="メール" placeholder="@">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>お問い合わせ内容</th>
-                        <td>
-                            <textarea name="問い合わせ" id=""></textarea>
-                        </td>
-                    </tr>
-                </table>
-                <input class="submit" type="submit" value="送信する">
-
-            </form>
-
         </section>
     </main>
     <script src="
