--- a/portfolio_ideta/about.html
+++ b/portfolio_ideta/about.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <nav>
             <li>
                 <ul class="en"><a href="">TOP</a></ul>
@@ -43,28 +43,30 @@
     </header>
     <div class="portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
-    </div> -->
-    <main>
-        <section>
-            <div class="profile wrapper">
-                <div>
+    </div>
+    <main data-scroll-container>
+        <section data-scroll-section class="scroll_section">
+            <div class="profile">
+                <div class="wrapper">
                     <div class="ttl">
                         <h2>私の話を少しだけ</h2>
                         <p class="cursive">History</p>
                         <div class="erase"></div>
-                        <div class="profile_line"></div>
+                        <div class="ttl_line"></div>
                     </div>
                 </div>
-                <div>
-                    <p class="profile_txt">大阪府出身、1991年生まれ。結婚を機に、25年過ごした大阪を離れて関東へ。<br>
+                <div class="txt wrapper">
+                    <p>大阪府出身、1991年生まれ。結婚を機に、25年過ごした大阪を離れて関東へ。<br>
                         今は埼玉県にある昨年建てた一軒家で、夫と２人の息子の４人暮らし。<br><br>
                         子どもの頃から絵を描くことや綺麗なものを見ることが好き。なんとなく過ごしてきましたが、今振り返ると「絵」や「イラスト」が常に側にある生活をしてきて、デザイナーを目指すのは必然のように感じます。<br><br>
                         もう１つ好きなものが医療。大阪大学を卒業後、看護師として移植医療を行う外科病棟と小児集中治療室、小児クリニックや保育園看護師など、主に小児医療を中心に経験してきました。特殊な環境下に置かれた子どもの気持ちやその家族の想いを汲み取り、安心してもらえるよう配慮することを大切に。私の周りはいつも子どもやその家族の笑顔でいっぱいでした。これが私の天職だ、と仕事にやりがいも感じています。<br><br>
                         そんな私に転機が訪れたのは、自分の結婚式でプロフィールブックとウェルカムボードを自作した時。こんなに楽しいことを仕事にできたら、もっと人生楽しくなると考えました。そして、その後出会ったのが「Webデザイナー」です。
                     </p>
                 </div>
-                <div>
-                    <p class="profile_txt">Webデザイナーとして、どんなことが私にできるのか。<br>
+                <!-- <div class="bg_img"></div> -->
+
+                <div class="txt wrapper">
+                    <p>Webデザイナーとして、どんなことが私にできるのか。<br>
                         看護師として大切にしてきたことと、養ってきた「聞く力」「寄り添う力」が私の強みであり、これからもずっと大切にしていきたい、自分の軸として持っていたい。<br><br>
                         お客様の想いを汲み取り、大切にし、本当の悩みや課題を引き出していく。私の大好きなデザインの力で解決に導き、お客様やユーザーを笑顔にする。<br>
                         まるで花が開くように。<br>
@@ -74,14 +76,14 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section data-scroll-section class="scroll_section">
             <div class="history wrapper">
                 <div>
                     <div class="ttl">
                         <h2>こんな風に生きてきました</h2>
                         <p class="cursive">History</p>
                         <div class="erase"></div>
-                        <div class="profile_line"></div>
+                        <div class="ttl_line"></div>
                     </div>
                 </div>
                 <!-- <p>デザインスキル</p> -->
@@ -145,151 +147,221 @@
 
             </div>
         </section>
-        <section>
-            <div class="skills">
+        <section data-scroll-section class="scroll_section">
+            <div class="skills wrapper">
                 <div class="ttl">
                     <h2>使えるスキル</h2>
                     <p class="cursive">Skills</p>
                     <div class="erase"></div>
-                    <div class="profile_line"></div>
+                    <div class="ttl_line"></div>
                 </div>
-
-                <div>
-                    <div class="content">
-                        <div>
+                <table>
+                    <tr>
+                        <th>
                             <p class="first">Ranking</p>
                             <img class="ranking" src="./images/no1.png" alt="一位">
-                        </div>
-                        <div>
-                            <img class="icon" src="./images/Illustrator.png" alt="イラストレーター">
-                        </div>
-                        <div>
-                            <p class="en">illustrator</p>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <div>
+                        </th>
+                        <td> <img class="icon" src="./images/Illustrator.png" alt="イラストレーター">
+                        </td>
+                        <td>
+                            <p class="icon_name">Illustrator</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
                             <p class="second">Ranking</p>
                             <img class="ranking" src="./images/no2.png" alt="三位">
-                        </div>
-                        <div>
-                            <img class="icon" src="./images/figma.png" alt="フィグマ">
-                        </div>
-                        <div>
-                            <p class="en">illustrator</p>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <div>
+                        </th>
+                        <td> <img class="icon" src="./images/figma.png" alt="フィグマ">
+                        </td>
+                        <td>
+                            <p class="icon_name">Figma</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
                             <p class="third">Ranking</p>
                             <img class="ranking" src="./images/no3.png" alt="二位">
-                        </div>
-                        <div>
-                            <img class="icon" src="./images/photoshop.png" alt="フォトショップ">
-                        </div>
-                        <div>
-                            <p class="en">photoshop</p>
-                        </div>
-                    </div>
-
-                </div>
-                <!-- <div>
-                    <div class="content">
-                        <img class="icon_top" src="./images/canva.png" alt="キャンバ">
-                        <p>canva</p>
-                    </div>
-                    <div class="content">
-                        <img class="icon_middle" src="./images/html.svg" alt="HTML">
-                        <p>HTML</p>
-                    </div>
-                    <div class="content">
-                        <img class="icon_middle" src="./images/css.svg" alt="CSS">
-                        <p>CSS</p>
-                    </div>
-                    <div class="content">
-                        <img class="icon_middle" src="./images/js.svg" alt="javascript">
-                        <p>javascript</p>
-                    </div>
-                    <div class="content">
-                        <img class="icon_bottom" src="./images/github.png" alt="github">
-                        <p>github</p>
-                    </div>
-                </div> -->
-
+                        </th>
+                        <td> <img class="icon" src="./images/photoshop.png" alt="フォトショップ">
+                        </td>
+                        <td>
+                            <p class="icon_name">photoshop</p>
+                        </td>
+                    </tr>
+                </table>
                 <table>
                     <tr>
                         <td> <img class="icon_top" src="./images/canva.png" alt="キャンバ">
                         </td>
                         <td>
-                            <p>canva</p>
+                            <p class="icon_name">canva</p>
                         </td>
                     </tr>
                     <tr>
                         <td> <img class="icon_middle" src="./images/html.svg" alt="HTML">
                         </td>
                         <td>
-                            <p>HTML</p>
+                            <p class="icon_name">HTML</p>
                         </td>
                     </tr>
                     <tr>
                         <td> <img class="icon_middle" src="./images/css.svg" alt="CSS">
                         </td>
                         <td>
-                            <p>CSS</p>
+                            <p class="icon_name">CSS</p>
                         </td>
                     </tr>
                     <tr>
                         <td> <img class="icon_middle" src="./images/js.svg" alt="javascript">
                         </td>
                         <td>
-                            <p>javascript</p>
+                            <p class="icon_name">javascript</p>
                         </td>
                     </tr>
                     <tr>
                         <td> <img class="icon_bottom" src="./images/github.png" alt="github">
                         </td>
                         <td>
-                            <p>github</p>
+                            <p class="icon_name">github</p>
                         </td>
                     </tr>
                 </table>
 
             </div>
         </section>
-        <!-- <section>
-            <div class="strength">
-                <h2>得意なこと</h2>
-                <div>
-                    <img src="" alt="">
-                    <p>人の話を聞くこと</p>
+        <section data-scroll-section class="scroll_section">
+            <div class="strength wrapper">
+                <div class="ttl">
+                    <h2>得意なこと</h2>
+                    <p class="cursive">Strength</p>
+                    <div class="erase"></div>
+                    <div class="ttl_line"></div>
                 </div>
+                <div class="contents">
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>人の話を聞くこと</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>実際の人物を線画で描くこと</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>自分で調べて解決すること</p>
+                        </div>
+                    </div>
 
-                <p>MBTI INFJ-T（提唱者）</p>
-                <p>周囲の人の心を読み取ることが得意で、相手に寄り添い支える力を持ち、優れた洞察力で周りの状況を察知して的確なサポートが行える。また豊かな感性と発想力があり、クリエイティブな仕事に適している。</p>
-            </div>
-        </section> -->
-        <!-- <section>
-            <div class="love">
-                <h2>好きなこと</h2>
-                <div>
-                    <img src="" alt="">
-                    <p>映画鑑賞</p>
+                    <p>MBTI INFJ-T（提唱者）</p>
+                    <p>周囲の人の心を読み取ることが得意で、相手に寄り添い支える力を持ち、優れた洞察力で周りの状況を察知して的確なサポートが行える。また豊かな感性と発想力があり、クリエイティブな仕事に適している。
+                    </p>
                 </div>
-
             </div>
-        </section> -->
-        <!-- <section>
-            <div class="design">
-                <h2>得意なデザイン</h2>
-                <div>
-                    <img src="" alt="">
-                    <p>シンプル</p>
+        </section>
+        <section data-scroll-section class="scroll_section">
+            <div class="love wrapper">
+                <div class="ttl">
+                    <h2>好きなこと</h2>
+                    <p class="cursive">Love</p>
+                    <div class="erase"></div>
+                    <div class="ttl_line"></div>
                 </div>
-
+                <div class="contents">
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>映画鑑賞</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>YouTubeを見ること</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>歌うこと</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>K-POPアイドルを見ること</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>カフェでのんびりすること</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>空を見ながら息抜きすること</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>春と秋に窓を開けて過ごすこと</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section> -->
+        </section>
+        <section data-scroll-section class="scroll_section">
+            <div class="design wrapper">
+                <div class="ttl">
+                    <h2>得意なデザイン</h2>
+                    <p class="cursive">design</p>
+                    <div class="erase"></div>
+                    <div class="ttl_line"></div>
+                </div>
+                <div class="contents">
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>シンプル</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p> ナチュラル</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>洗練された</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>大人かわいい</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img class="check" src="./images/check.svg">
+                        <div>
+                            <p>上品</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <!-- <script src="
+    <script src="
 https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
 "></script>
     <script>
@@ -303,7 +375,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
             })
         })()
 
-    </script> -->
+    </script>
 </body>
 
 </html>
