--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -44,6 +44,7 @@
     <div class="portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
+
     <main data-scroll-container>
         <section data-scroll-section class="scroll_section">
             <div class="fv">
@@ -113,7 +114,7 @@
                 </div>
                 <!-- <img src="./images/flower002.png"> -->
 
-                <div class="wrapper">
+                <div class="lp wrapper">
                     <div class="lp_square">
                         <h3>LANDING PAGE</h3>
                         <div class="lp_img">
