--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <nav>
             <li>
                 <ul class="en"><a href="">TOP</a></ul>
@@ -43,27 +43,147 @@
     </header>
     <div class="portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
-    </div> -->
+    </div>
 
-    <!-- <main data-scroll-container> -->
-    <!-- <section data-scroll-section class="scroll_section"> -->
-
-    <main>
-        <section>
-            <div class="wrapper">
-                <div class="ttl">
-                    <h1>カフェサイト（架空）</h1>
-                    <p>HP</p>
+    <main data-scroll-container>
+        <section data-scroll-section class="scroll_section">
+            <div class="top wrapper message-body js-fixedPosition">
+                <div class="bg"></div>
+                <div class="container">
+                    <div class="ttl">
+                        <h1>カフェサイト（架空）</h1>
+                        <p>HP</p>
+                    </div>
+                    <div class="img">
+                        <div class="img_pc"> <img src="./images/hp_cafe_1.jpg">
+                        </div>
+                        <div class="img_sp"> <img src="./images/works_lp_00-80.jpg">
+                        </div>
+                    </div>
                 </div>
-                <div><img src="./images/hp_cafe_1.jpg"><img src="./images/works_lp_00-80.jpg"></div>
             </div>
+        </section>
+        <section data-scroll-section class="scroll_section">
+            <div class="contents wrapper">
+                <!-- <div class="content">
+                    <p class="ttl">制作期間</p>
+                    <p class="txt">２日</p>
+                </div> -->
+                <table>
+                    <tr>
+                        <th>
+                            <p class="ttl">制作期間</p>
+                        </th>
+                        <td>
+                            <p class="txt">２日</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <p class="ttl">担当範囲</p>
+                        </th>
+                        <td>
+                            <p class="txt">Webデザイン、コーディング（HTML・CSS）</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <p class="ttl">使用ツール</p>
+                        </th>
+                        <td>
+                            <p class="txt">Adobe Illustrator・Adobe photoshop</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <p class="ttl">ターゲット</p>
+                        </th>
+                        <td>
+                            <p class="txt">50〜60代の女性</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <p class="ttl">コンセプト</p>
+                        </th>
+                        <td>
+                            <p class="txt">ナチュラル、おしゃれ</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <p class="ttl">コンセプト</p>
+                        </th>
+                        <td>
+                            <p class="txt">ー</p>
+                        </td>
+                    </tr>
+                </table>
+                <div class="point">
+                    <h2>制作ポイント</h2>
+                    <p>訴求ポイントは「簡単」に作ることができるところ。<br>
+                        「簡単」というだけでは消費者に正しく伝わらないため、具体的に「水・肉・トマト缶だけ」という文言を目立たせ、パッと見ただけでもイメージが湧きやすいように料理画像も併用した。
+                        <br><br>
+                        またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
+                    </p>
+                    <p>訴求ポイントは「簡単」に作ることができるところ。<br>
+                        「簡単」というだけでは消費者に正しく伝わらないため、具体的に「水・肉・トマト缶だけ」という文言を目立たせ、パッと見ただけでもイメージが湧きやすいように料理画像も併用した。
+                        <br><br>
+                        またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
+                    </p>
+                </div>
 
+            </div>
+        </section>
+        <section data-scroll-section class="scroll_section">
+
+            <div class="allpage">
+                <p class="en">ALL PAGES</p>
+                <div>
+                    <img src="./images/hp_cafe_2.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_3.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_4.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_5.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_6.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_7.jpg" alt="">
+                </div>
+                <p class="en">RESPONSIVE</p>
+
+                <div>
+                    <img src="./images/hp_cafe_8.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_9.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/hp_cafe_10.jpg" alt="">
+                </div>
+
+            </div>
+            <div class="wrapper">
+                <a href="">
+                    <div class="btn">
+                        <p class="en">CONTACT</p>
+                        <img src="./images/mail.svg">
+                    </div>
+                </a>
+            </div>
 
         </section>
     </main>
 
 
-    <!-- <script src="
+    <script src="
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
     "></script>
     <script>
@@ -77,7 +197,7 @@
             })
         })()
 
-    </script> -->
+    </script>
 
 </body>
 
