--- a/portfolio_ideta/about.html
+++ b/portfolio_ideta/about.html
@@ -148,119 +148,122 @@
             </div>
         </section>
         <section data-scroll-section class="scroll_section">
-            <div class="skills wrapper">
-                <div class="ttl">
-                    <h2>使えるスキル</h2>
-                    <p class="cursive">Skills</p>
-                    <div class="erase"></div>
-                    <div class="ttl_line"></div>
+            <div class="skills">
+                <div class="wrapper">
+                    <div class="ttl">
+                        <h2>使えるスキル</h2>
+                        <p class="cursive">Skills</p>
+                        <div class="erase"></div>
+                        <div class="ttl_line"></div>
+                    </div>
+                    <table>
+                        <tr>
+                            <th>
+                                <p class="first">Ranking</p>
+                                <img class="ranking" src="./images/no1.png" alt="一位">
+                            </th>
+                            <td> <img class="icon" src="./images/Illustrator.png" alt="イラストレーター">
+                            </td>
+                            <td>
+                                <p class="icon_name">Illustrator</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                <p class="second">Ranking</p>
+                                <img class="ranking" src="./images/no2.png" alt="三位">
+                            </th>
+                            <td> <img class="icon" src="./images/figma.png" alt="フィグマ">
+                            </td>
+                            <td>
+                                <p class="icon_name">Figma</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                <p class="third">Ranking</p>
+                                <img class="ranking" src="./images/no3.png" alt="二位">
+                            </th>
+                            <td> <img class="icon" src="./images/photoshop.png" alt="フォトショップ">
+                            </td>
+                            <td>
+                                <p class="icon_name">photoshop</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td> <img class="icon_top" src="./images/canva.png" alt="キャンバ">
+                            </td>
+                            <td>
+                                <p class="icon_name">canva</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> <img class="icon_middle" src="./images/html.svg" alt="HTML">
+                            </td>
+                            <td>
+                                <p class="icon_name">HTML</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> <img class="icon_middle" src="./images/css.svg" alt="CSS">
+                            </td>
+                            <td>
+                                <p class="icon_name">CSS</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> <img class="icon_middle" src="./images/js.svg" alt="javascript">
+                            </td>
+                            <td>
+                                <p class="icon_name">javascript</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> <img class="icon_bottom" src="./images/github.png" alt="github">
+                            </td>
+                            <td>
+                                <p class="icon_name">github</p>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-                <table>
-                    <tr>
-                        <th>
-                            <p class="first">Ranking</p>
-                            <img class="ranking" src="./images/no1.png" alt="一位">
-                        </th>
-                        <td> <img class="icon" src="./images/Illustrator.png" alt="イラストレーター">
-                        </td>
-                        <td>
-                            <p class="icon_name">Illustrator</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>
-                            <p class="second">Ranking</p>
-                            <img class="ranking" src="./images/no2.png" alt="三位">
-                        </th>
-                        <td> <img class="icon" src="./images/figma.png" alt="フィグマ">
-                        </td>
-                        <td>
-                            <p class="icon_name">Figma</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>
-                            <p class="third">Ranking</p>
-                            <img class="ranking" src="./images/no3.png" alt="二位">
-                        </th>
-                        <td> <img class="icon" src="./images/photoshop.png" alt="フォトショップ">
-                        </td>
-                        <td>
-                            <p class="icon_name">photoshop</p>
-                        </td>
-                    </tr>
-                </table>
-                <table>
-                    <tr>
-                        <td> <img class="icon_top" src="./images/canva.png" alt="キャンバ">
-                        </td>
-                        <td>
-                            <p class="icon_name">canva</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> <img class="icon_middle" src="./images/html.svg" alt="HTML">
-                        </td>
-                        <td>
-                            <p class="icon_name">HTML</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> <img class="icon_middle" src="./images/css.svg" alt="CSS">
-                        </td>
-                        <td>
-                            <p class="icon_name">CSS</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> <img class="icon_middle" src="./images/js.svg" alt="javascript">
-                        </td>
-                        <td>
-                            <p class="icon_name">javascript</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> <img class="icon_bottom" src="./images/github.png" alt="github">
-                        </td>
-                        <td>
-                            <p class="icon_name">github</p>
-                        </td>
-                    </tr>
-                </table>
-
             </div>
         </section>
         <section data-scroll-section class="scroll_section">
-            <div class="strength wrapper">
-                <div class="ttl">
-                    <h2>得意なこと</h2>
-                    <p class="cursive">Strength</p>
-                    <div class="erase"></div>
-                    <div class="ttl_line"></div>
-                </div>
-                <div class="contents">
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>人の話を聞くこと</p>
-                        </div>
+            <div class="strength">
+                <div class="wrapper">
+                    <div class="ttl">
+                        <h2>得意なこと</h2>
+                        <p class="cursive">Strength</p>
+                        <div class="erase"></div>
+                        <div class="ttl_line"></div>
                     </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>実際の人物を線画で描くこと</p>
+                    <div class="contents">
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>人の話を聞くこと</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>自分で調べて解決すること</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>実際の人物を線画で描くこと</p>
+                            </div>
                         </div>
-                    </div>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>自分で調べて解決すること</p>
+                            </div>
+                        </div>
 
-                    <p>MBTI INFJ-T（提唱者）</p>
-                    <p>周囲の人の心を読み取ることが得意で、相手に寄り添い支える力を持ち、優れた洞察力で周りの状況を察知して的確なサポートが行える。また豊かな感性と発想力があり、クリエイティブな仕事に適している。
-                    </p>
+                        <p>MBTI INFJ-T（提唱者）</p>
+                        <p>周囲の人の心を読み取ることが得意で、相手に寄り添い支える力を持ち、優れた洞察力で周りの状況を察知して的確なサポートが行える。また豊かな感性と発想力があり、クリエイティブな仕事に適している。
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
