--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -114,22 +114,23 @@
                 </div>
                 <!-- <img src="./images/flower002.png"> -->
 
-                <div class="lp wrapper">
-                    <div class="lp_square">
-                        <h3>LANDING PAGE</h3>
-                        <div class="lp_img">
-                            <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
-                        </div>
-                        <a href="">
-                            <div class="btn">
-                                <p>もっと<br>知りたい</p>
-                                <div class="arrow_right"></div>
-                                <div class="arrow_bottom"></div>
-                                <p class="en">MORE</p>
+                <div class="lp">
+                    <div class="wrapper">
+                        <div class="lp_square">
+                            <h3>LANDING PAGE</h3>
+                            <div class="lp_img">
+                                <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
                             </div>
-                        </a>
+                            <a href="">
+                                <div class="btn">
+                                    <p>もっと<br>知りたい</p>
+                                    <div class="arrow_right"></div>
+                                    <div class="arrow_bottom"></div>
+                                    <p class="en">MORE</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-
 
                 </div>
                 <!-- <img src="./images/flower003.png"> -->
@@ -164,24 +165,26 @@
                     <div class="contact_line"></div>
                 </div>
 
-                <form action="confirm.php" method="post" class="wrapper">
+                <form
+                    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdQT8L3UAJMfiiDTRGbAAKqm935UD3J8gkRpPijM-KmUQ2-sQ/formResponse"
+                    method="post" class="wrapper">
                     <table class="contact-table">
                         <tr>
                             <th>お名前</th>
                             <td>
-                                <input type="text" name="名前" placeholder="山田　花子">
+                                <input type="text" name="entry.193574675" placeholder="山田　花子">
                             </td>
                         </tr>
                         <tr>
                             <th>メールアドレス</th>
                             <td>
-                                <input type="email" name="メール" placeholder="@">
+                                <input type="email" name="entry.229513772" placeholder="@">
                             </td>
                         </tr>
                         <tr>
                             <th>お問い合わせ内容</th>
                             <td>
-                                <textarea name="問い合わせ" id=""></textarea>
+                                <textarea name="entry.1182652199" id=""></textarea>
                             </td>
                         </tr>
                     </table>
